--- a/Identify_Customer_Segments.ipynb
+++ b/Identify_Customer_Segments.ipynb
@@ -1039,7 +1039,9 @@
    "source": [
     "#### Discussion 1.1.2: Assess Missing Data in Each Column\n",
     "\n",
-    "(Double click this cell and replace this text with your own text, reporting your observations regarding the amount of missing data in each column. Are there any patterns in missing values? Which columns were removed from the dataset?)"
+    "(Double click this cell and replace this text with your own text, reporting your observations regarding the amount of missing data in each column. Are there any patterns in missing values? Which columns were removed from the dataset?)\n",
+    "\n",
+    "The amount of missing data is 8373929 and this is a large number of missing values. Yes there is a pattrens the columns with the same starting name have the same number of missing values, for example all the columns starting with PLZ8 have 116515 missing values and vice versa. AGER_TYP, GEBURTSJAHR, TITEL_KZ, ALTER_HH, KK_KUNDENTYP, and KBA05_BAUMAX are the columns that are the outliers and removed from the dataset."
    ]
   },
   {
@@ -1176,7 +1178,9 @@
    "source": [
     "#### Discussion 1.1.3: Assess Missing Data in Each Row\n",
     "\n",
-    "(Double-click this cell and replace this text with your own text, reporting your observations regarding missing data in rows. Are the data with lots of missing values are qualitatively different from data with few or no missing values?)"
+    "(Double-click this cell and replace this text with your own text, reporting your observations regarding missing data in rows. Are the data with lots of missing values are qualitatively different from data with few or no missing values?)\n",
+    "\n",
+    "The amount of missing data is 891221 and this is a large number of missing values. The data with High missing values have different as you can see from the plot above. Also the number of data with High missing values is lower than the number of the data Low missing data."
    ]
   },
   {
@@ -1294,7 +1298,9 @@
    "source": [
     "#### Discussion 1.2.1: Re-Encode Categorical Features\n",
     "\n",
-    "(Double-click this cell and replace this text with your own text, reporting your findings and decisions regarding categorical features. Which ones did you keep, which did you drop, and what engineering steps did you perform?)"
+    "(Double-click this cell and replace this text with your own text, reporting your findings and decisions regarding categorical features. Which ones did you keep, which did you drop, and what engineering steps did you perform?)\n",
+    "\n",
+    "We keep all the columns except CAMEO_DEU_2015. Notice that the CAMEO_DEU_2015 column have a value of 44 so it will result to 44 unnecessary varibles, so it should be dropped.The engineering steps we take by dividing the data binary, and multi-level then see how many each column have varibles."
    ]
   },
   {
@@ -1388,7 +1394,9 @@
    "source": [
     "#### Discussion 1.2.2: Engineer Mixed-Type Features\n",
     "\n",
-    "(Double-click this cell and replace this text with your own text, reporting your findings and decisions regarding mixed-value features. Which ones did you keep, which did you drop, and what engineering steps did you perform?)"
+    "(Double-click this cell and replace this text with your own text, reporting your findings and decisions regarding mixed-value features. Which ones did you keep, which did you drop, and what engineering steps did you perform?)\n",
+    "\n",
+    "We keep all the columns except PRAEGENDE_JUGENDJAHRE and CAMEO_INTL_2015.We engineer two new variables for PRAEGENDE_JUGENDJAHRE Investigation which was PRAEGENDE_DECADE and PRAEGENDE_MVT. And we engineer two new variables for CAMEO_INTL_2015 Investigation which was HOUSE_HOLD_TYPE and LIFE_STAGE."
    ]
   },
   {
@@ -1729,7 +1737,9 @@
    "source": [
     "### Discussion 2.1: Apply Feature Scaling\n",
     "\n",
-    "(Double-click this cell and replace this text with your own text, reporting your decisions regarding feature scaling.)"
+    "(Double-click this cell and replace this text with your own text, reporting your decisions regarding feature scaling.)\n",
+    "\n",
+    "In feature scaling we choose to load the dataset again and then we send the data to clean_data function that return datafram without missing values and missing_data datafarme with missing values. Then we use Imputer to fit and transform the data without missing values. Fainaly we use StandardScaler to scale our data."
    ]
   },
   {
@@ -1967,7 +1977,9 @@
    "source": [
     "### Discussion 2.3: Interpret Principal Components\n",
     "\n",
-    "(Double-click this cell and replace this text with your own text, reporting your observations from detailed investigation of the first few principal components generated. Can we interpret positive and negative values from them in a meaningful way?)"
+    "(Double-click this cell and replace this text with your own text, reporting your observations from detailed investigation of the first few principal components generated. Can we interpret positive and negative values from them in a meaningful way?)\n",
+    "\n",
+    "I decided to retain 35 principal components, as it expalains more than 90% variances while reducing the number of features by 50% approximately, which will give us informative data, also will neglect uninformative data or features."
    ]
   },
   {
@@ -2113,7 +2125,9 @@
    "source": [
     "### Discussion 3.1: Apply Clustering to General Population\n",
     "\n",
-    "(Double-click this cell and replace this text with your own text, reporting your findings and decisions regarding clustering. Into how many clusters have you decided to segment the population?)"
+    "(Double-click this cell and replace this text with your own text, reporting your findings and decisions regarding clustering. Into how many clusters have you decided to segment the population?)\n",
+    "\n",
+    "I decided to choose 8 because 8 seems to be the elbow."
    ]
   },
   {
@@ -2376,7 +2390,11 @@
    "source": [
     "### Discussion 3.3: Compare Customer Data to Demographics Data\n",
     "\n",
-    "(Double-click this cell and replace this text with your own text, reporting findings and conclusions from the clustering analysis. Can we describe segments of the population that are relatively popular with the mail-order company, or relatively unpopular with the company?)"
+    "(Double-click this cell and replace this text with your own text, reporting findings and conclusions from the clustering analysis. Can we describe segments of the population that are relatively popular with the mail-order company, or relatively unpopular with the company?)\n",
+    "\n",
+    "based on the above analysis, for first cluster which is have 0 clusters, we see that the customers seen with the mail-order company.\n",
+    "\n",
+    "but for the second cluster which is have 1 cluster, we see that the customers seen more attracted in purchasing by mail order sales, same for third and fouth clusters."
    ]
   },
   {
