--- a/Identify_Customer_Segments.ipynb
+++ b/Identify_Customer_Segments.ipynb
@@ -1300,7 +1300,7 @@
     "\n",
     "(Double-click this cell and replace this text with your own text, reporting your findings and decisions regarding categorical features. Which ones did you keep, which did you drop, and what engineering steps did you perform?)\n",
     "\n",
-    "We keep all the columns except CAMEO_DEU_2015. Notice that the CAMEO_DEU_2015 column have a value of 44 so it will result to 44 unnecessary varibles, so it should be dropped."
+    "I keep all the columns except CAMEO_DEU_2015. Notice that the CAMEO_DEU_2015 column have a value of 44 so it will result to 44 unnecessary varibles, so it should be dropped.The engineering steps we take by dividing the data binary, and multi-level then see how many each column have varibles."
    ]
   },
   {
@@ -1847,7 +1847,7 @@
     "\n",
     "(Double-click this cell and replace this text with your own text, reporting your findings and decisions regarding dimensionality reduction. How many principal components / transformed features are you retaining for the next step of the analysis?)\n",
     "\n",
-    "I decided to retain 35 principal components, as it expalains more than 90% variances while reducing the number of features by 50% approximately, which will give us informative data, also will neglect uninformative data or features."
+    "We decided to retain 25 principal components, as it expalains more than 90% variances while reducing the number of features by 50% approximately, which will give us informative data, also will neglect uninformative data or features."
    ]
   },
   {
@@ -1979,9 +1979,7 @@
    "source": [
     "### Discussion 2.3: Interpret Principal Components\n",
     "\n",
-    "(Double-click this cell and replace this text with your own text, reporting your observations from detailed investigation of the first few principal components generated. Can we interpret positive and negative values from them in a meaningful way?)\n",
-    "\n",
-    "I decided to retain 35 principal components, as it expalains more than 90% variances while reducing the number of features by 50% approximately, which will give us informative data, also will neglect uninformative data or features."
+    "(Double-click this cell and replace this text with your own text, reporting your observations from detailed investigation of the first few principal components generated. Can we interpret positive and negative values from them in a meaningful way?)"
    ]
   },
   {
@@ -2422,6 +2420,7 @@
     "- https://github.com/drakobian/intro-to-ml-tensorflow/tree/master/customer_segment\n",
     "- https://github.com/AbdulmajeedAlOmari/identify-customer-segments\n",
     "- https://github.com/wengsengh/Identify-Customer-Segments\n",
+    "- https://github.com/HamadAlAssafi/Identify_Customer_Segments_IMLND/blob/main/Identify_Customer_Segments_IMLND/Identify_Customer_Segments.ipynb\n",
     "\n",
     "Lesson 4: PCA mini project solution"
    ]
