--- a/Identify_Customer_Segments.ipynb
+++ b/Identify_Customer_Segments.ipynb
@@ -1739,7 +1739,7 @@
     "\n",
     "(Double-click this cell and replace this text with your own text, reporting your decisions regarding feature scaling.)\n",
     "\n",
-    "In feature scaling we choose to load the dataset again and then we send the data to clean_data function that return datafram without missing values and missing_data datafarme with missing values. Then we use Imputer to fit and transform the data without missing values. Fainaly we use StandardScaler to scale our data."
+    "In feature scaling we choose to load the dataset again and then we send the data to clean_data function that return datafram without missing values and missing_data datafarme with missing values. Then we import imputer and use it to fit and transform the data without missing values, that replaces the missing value with NaN. Fainaly we use StandardScaler to scale our data."
    ]
   },
   {
